--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Cassandra<img src="ico/ico.png" alt="Image" heigh="30" width="30"> </h1>
-								<p>A graphical UI to display my Information and Works from my <a href="https://github.com/AlienWolfX">Github</a> account<br />
-								derived from <a href="https://html5up.net">HTML5.net</a></p>
+								<p>A website for my information and works from my <a href="https://github.com/AlienWolfX">Github</a> account<br />
+								source code from <a href="https://html5up.net">HTML5.net</a></p>
 							</div>
 						</div>
 						<nav>
@@ -47,15 +47,18 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/me.jpg" alt="" /></span>
-								<p>Hi! My name is Allen Gabrielle S. Cruiz a Senior High Graduate at <a href="https://dlsjbc.edu.ph/">De La Salle John Bosco College</a> </p>
+								<p>Hi! My name is Allen Gabrielle S. Cruiz a Senior High Graduate at <a href="https://dlsjbc.edu.ph/">De La Salle John Bosco College</a>, I'm currently experimenting on some stuff lately like Reverse engineering hardware, WiFi penetration testing, Coding and Phishing. </p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>PunX - A python script that attacks the Phisher forwarding request to send multiple generated Emails and Passowrds</p>
+								<span class="image main"><img src="images/01.png" alt="" /></span>
+								<p>Easy Script - A bash script used to start services, update alternatives and change java version.</p>
+								<span class="image main"><img src="images/02.png" alt="" />
+								<p>AptX - A script used to install Kali-Linux Metapackages without the Hassle of typing each command in the terminal</p>
+								<span class="image main"><img src="images/03.png" alt="" />
 							</article>
 
 						<!-- About -->
@@ -68,7 +71,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="action.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -84,15 +87,15 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="submit" name="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.youtube.com/channel/UCg-qijzRZDRM7-CB7EFUy5A" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+									<li><a href="https://www.facebook.com/allengabriellecruiz/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/AlienWolfX" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
