--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
-								<form method="post" action="action.php">
+								<h2 class="major">Contact IS NOT AVAILABLE</h2>
+								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
+											<input disabled="text" type="text" name="name" id="name" value="Allen Cruiz" />
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input disabled="text" type="text" name="email" id="email" value="cruizallen2@gmail.com" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
+											<textarea disabled="message" style="resize: none" name="message" id="message" rows="4">Error! action.php is missing please check if file exist!</textarea>
 										</div>
 									</div>
 									<ul class="actions">
