--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact IS NOT AVAILABLE</h2>
-								<form method="post" action="#">
+								<form method="post" action="action.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
-											<input disabled="text" type="text" name="name" id="name" value="Allen Cruiz" />
+											<input disabled="text" type="text" name="name" id="name" value="Allen Gabrielle S. Cruiz" />
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
@@ -83,12 +83,12 @@
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea disabled="message" style="resize: none" name="message" id="message" rows="4">Error! action.php is missing please check if file exist!</textarea>
+											<textarea disabled="message" style="resize: none" name="message" id="message" rows="4">CONTACT IS CURRENTLY UNAVAILABLE PLEASE USE THE ICONS BELOW TO CONTACT ME THROUGH MY SOCIAL MEDIA ACCOUNTS</textarea>
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" name="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
+										<li><input disabled="submit" type="submit" name="submit" value="Send Message" class="primary" /></li>
+										<li><input disabled="reset" type="reset" value="Reset" /></li>
 									</ul>
 								</form>
 								<ul class="icons">
