--- a/index.html
+++ b/index.html
@@ -617,6 +617,11 @@
 	</div>
 	-->
 	<div id="map" class="fh5co-map"></div>
+		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
+  			<source src="vid/al.mp4" type="video/mp4">
+  			<source src="movie.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video> 
 	</div>
 	<hr>
 	<div id="fh5co-footer">
@@ -645,9 +650,6 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
