--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 	-->
 	<div id="map" class="fh5co-map"></div>
 		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
-  			<source src="vid/al.mp4" type="video/mp4">
+  			<source src="https://www.youtube.com/watch?v=p57tI6qw_Hk" type="video/mp4">
   			<source src="movie.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video> 
