--- a/index.html
+++ b/index.html
@@ -617,11 +617,9 @@
 	</div>
 	-->
 	<div id="map" class="fh5co-map"></div>
-		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
-  			<source src="https://www.youtube.com/watch?v=p57tI6qw_Hk" type="video/mp4">
-  			<source src="movie.ogg" type="video/ogg">
-			Your browser does not support the video tag.
-		</video> 
+		<iframe width="420" height="315"
+			src="https://www.youtube.com/embed/tgbNymZ7vqY">
+		</iframe>
 	</div>
 	<hr>
 	<div id="fh5co-footer">
