--- a/index.html
+++ b/index.html
@@ -616,18 +616,12 @@
 		</div>
 	</div>
 	-->
-	 <style> 
-      		iframe { 
-       			width: 500px; /* It should not be 100% */ 
-      			height: 500px: 
-       			margin-left: auto;   /* Automatic margin from left */ 
-      			margin-right: auto; /* Automatic margin from right */ 
-     			} 
-	</style>
 	<div id="map" class="fh5co-map"></div>
-		<iframe
-			src="https://www.youtube.com/watch?v=p57tI6qw_Hk">
-		</iframe>
+		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
+  			<source src="vid/Tendo.mp4" type="video/mp4">
+  			<source src="movie.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video> 
 	</div>
 	<hr>
 	<div id="fh5co-footer">
