--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="#"><i class="icon-flag2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -656,4 +656,3 @@
 
 	</body>
 </html>
-
