--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="dl/test.txt" target="_blank" class="work" style="background-image: url(images/Bash.jpg);">
+					<a href="dl/test.txt.txt" target="_blank" class="work" style="background-image: url(images/Bash.jpg);">
 						<div class="desc">
 							<h3>Easy Script</h3>
 							<span>A simple bash script to execute commonly used commands</span>
