--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/NA.jpeg);"></div>
-							<h1><span>Allen Gabrielle Cruiz</span></h1>
+							<div class="profile-thumb" style="background: url(images/me.jpg);"></div>
+							<h1><span>Allen Gabrielle S. Cruiz</span></h1>
 							<h3><span>Student / Hobbyist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank" ><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-flag2"></i></a></li>
+									<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-youtube-with-circle"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -105,13 +105,13 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>I'm a soon to be college student planing to take ICT or COMPSCIENCE. Most of my time is spent working on Basic Electronics, Basic Programming and Reverse Engineering Hardware</p>
+					<p>NULL</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="#"><i class="icon-flag2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -119,7 +119,6 @@
 		</div>
 	</div>
 	<hr>
-
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -231,12 +230,12 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Work</h2>
+					<h2>Download and Description</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="dl/test.txt.txt" target="_blank" class="work" style="background-image: url(images/Bash.jpg);">
+					<a href="files/Easy.sh" class="work" style="background-image: url(images/Bash.jpg);">
 						<div class="desc">
 							<h3>Easy Script</h3>
 							<span>A simple bash script to execute commonly used commands</span>
@@ -244,7 +243,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/Apt.png);">
+					<a href="files/AptX.sh" class="work" style="background-image: url(images/Apt.png);">
 						<div class="desc">
 							<h3>AptX</h3>
 							<span>Bash script to install Kali-Linux Metapackages</span>
@@ -252,77 +251,69 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/Pun.png);">
+					<a href="files/PunX.py" class="work" style="background-image: url(images/Pun.png);">
 						<div class="desc">
-							<h3>PunX</h3>
-							<span>Python script to send muliple data to a Phishing page</span>
+							<h3 href="files/PunX.py">PunX</h3>
+							<span>Python script that send muliple credentials to a Phishing page</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>CassandraX</h3>
-							<span>Web interface for Project upload</span>
+							<h3>N/A</h3>
+							<span>N/A</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Website</span>
+							<h3>N/A</h3>
+							<span>N/A</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>N/A</h3>
+							<span>N/A</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>PN/A</h3>
+							<span>N/A</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>N/A</h3>
+							<span>N/A</span>
 						</div>
 					</a>
 				</div>
 			</div>
 		</div>
 	</div>
-
-	<div id="fh5co-skills" class="animate-box"></div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Random Video</h2>
-					<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
-						<source src="vid/Tendo.mp4" type="video/mp4">
-						<source src="movie.ogg" type="video/ogg">
-						Your browser does not support the video tag.
-					</video>
-				</div>
-			</div>
-		</div>
+	<div id="map" class="fh5co-map"></div>
+		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
+  			<source src="vid/Tendo.mp4" type="video/mp4">
+  			<source src="movie.ogg" type="video/ogg">
+			Your browser does not support the video tag.
+		</video> 
 	</div>
 	<hr>
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2021 Isidore Corp. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Presented by: <a href="https://github.com/AlienWolfX" target="_blank">AlienWolfX</a></p>
+					<p>&copy; 2021 Isidore Corp. All Rights Reserved. <br>Template by: <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Modified by: <a href="https://github.com/AlienWolfX" target="_blank">AlienWolfX</a></p>
 				</div>
 			</div>
 		</div>
@@ -350,4 +341,3 @@
 
 	</body>
 </html>
-
