--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/NA.jpeg);"></div>
+							<div class="profile-thumb" style="background: url(images/Me.jpg);"></div>
 							<h1><span>Allen Gabrielle S. Cruiz</span></h1>
 							<h3><span>Student / Hobbyist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank" ><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-youtube-with-circle"></i></a></li>
+									<li><a href="https://phcorner.net/members/alienwolfx.1544405/"><i class="icon-flag2"></i></a></li>
+									<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q"><i class="icon-youtube"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -105,13 +105,13 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>NULL</p>
+					<p>Yes I'm a CAT XD</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-flag2"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://phcorner.net/members/alienwolfx.1544405/"><i class="icon-flag2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -285,7 +285,7 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
-							<h3>PN/A</h3>
+							<h3>N/A</h3>
 							<span>N/A</span>
 						</div>
 					</a>
@@ -302,12 +302,13 @@
 		</div>
 	</div>
 	<div id="map" class="fh5co-map"></div>
-		<video style="display:block; margin: 0 auto;" width="700" height="540" controls>
+		<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+			<h2> VIDEOS </h2>
+		</div>
+		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
   			<source src="vid/Tendo.mp4" type="video/mp4">
-  			<source src="movie.ogg" type="video/ogg">
 			Your browser does not support the video tag.
 		</video> 
-	</div>
 	<hr>
 	<div id="fh5co-footer">
 		<div class="container">
@@ -338,6 +339,8 @@
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!-- Video -->
+	<script src="js/vid.js"></script>
 
 	</body>
 </html>
