--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 			<h2> VIDEOS </h2>
 		</div>
 		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
-  			<source src="vid/Tendo.mp4" type="video/mp4">
+  			<source src="vid/Yugo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video> 
 	<hr>
