--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 	</div>
 
 	<div class="gototop js-top">
-		<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
+		<a class="js-gotop"><i class="icon-arrow-up22"></i></a>
 	</div>
 	
 	<!-- jQuery -->
@@ -336,11 +336,12 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	
-	<!-- Main -->
-	<script src="js/main.js"></script>
 	<!-- Video -->
 	<script src="js/vid.js"></script>
+
+	<!-- Main -->
+	<script src="js/main.js"></script>
+	
 
 	</body>
 </html>
