--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank" ><i class="icon-facebook2"></i></a></li>
-									<li><a href="https://phcorner.net/members/alienwolfx.1544405/"><i class="icon-flag2"></i></a></li>
-									<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q"><i class="icon-youtube"></i></a></li>
+									<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-flag2"></i></a></li>
+									<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q" target="_blank"><i class="icon-youtube"></i></a></li>
 								</ul>
 							</p>
 						</div>
