--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/Me.jpg);"></div>
-							<h1><span>Allen Gabrielle S. Cruiz</span></h1>
+							<h1><span>Allen S. Cruiz</span></h1>
 							<h3><span>Student / Hobbyist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
@@ -96,22 +96,22 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Allen Gabrielle Cruiz</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Allen S. Cruiz</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">N/A</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">cruizallen2@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">N/A</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">UNAVAILABLE</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block"><a href="https://alienwolfx.github.io/index/" target="_blank">CassandraX</a></span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">Surigao Del Sur</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>Yes I'm a CAT XD</p>
+					<p>I'm Allen Cruiz a College freshman at CSU taking BSIT</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/AlienWolfX" target="_blank"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.facebook.com/allengabriellecruiz" target="_blank"><i class="icon-facebook3"></i></a></li>
-							<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q"><i class="icon-youtube"></i></a></li>
-							<li><a href="https://phcorner.net/members/alienwolfx.1544405/"><i class="icon-flag2"></i></a></li>
+							<li><a href="https://www.youtube.com/channel/UCxYnPGhqmgm0caoG1VE6h8Q" target="_blank"><i class="icon-youtube"></i></a></li>
+							<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-flag2"></i></a></li>
 						</ul>
 					</p>
 				</div>
