--- a/index.html
+++ b/index.html
@@ -301,10 +301,13 @@
 			</div>
 		</div>
 	</div>
-	<div id="map" class="fh5co-map"></div>
-		<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-			<h2> VIDEOS </h2>
-		</div>
+	<div id="fh5co-about" class="animate-box">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2> Video </h2>
+				</div>
+			</div>
 		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
   			<source src="vid/Yugo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
