--- a/index.html
+++ b/index.html
@@ -9,20 +9,6 @@
 	<meta name="keywords" content="null" />
 	<meta name="author" content="AlienWolfX" />
 
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -61,7 +47,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cicada3301.gif);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -235,7 +221,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/Easy.sh" class="work" style="background-image: url(images/Bash.jpg);">
+					<a href="files/EasyScript.zip" class="work" style="background-image: url(images/Bash.jpg);">
 						<div class="desc">
 							<h3>Easy Script</h3>
 							<span>A simple bash script to execute commonly used commands</span>
@@ -243,7 +229,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/AptX.sh" class="work" style="background-image: url(images/Apt.png);">
+					<a href="files/AptX.zip" class="work" style="background-image: url(images/Apt.png);">
 						<div class="desc">
 							<h3>AptX</h3>
 							<span>Bash script to install Kali-Linux Metapackages</span>
@@ -251,10 +237,10 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/PunX.py" class="work" style="background-image: url(images/Pun.png);">
+					<a href="files/PunX.zip" class="work" style="background-image: url(images/Pun.png);">
 						<div class="desc">
-							<h3 href="files/PunX.py">PunX</h3>
-							<span>Python script that send muliple credentials to a Phishing page</span>
+							<h3>PunX</h3>
+							<span>Python script that sends multiple data via POST.</span>
 						</div>
 					</a>
 				</div>
@@ -309,7 +295,7 @@
 				</div>
 			</div>
 		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
-  			<source src="vid/Yugo.mp4" type="video/mp4">
+  			<source src="vid/Tendo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video> 
 	<hr>
