--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>About Me</h2>
+					<h2> About Me </h2>
 				</div>
 			</div>
 			<div class="row">
@@ -100,6 +100,83 @@
 							<li><a href="https://phcorner.net/members/alienwolfx.1544405/" target="_blank"><i class="icon-flag2"></i></a></li>
 						</ul>
 					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<hr>
+	<div id="fh5co-work" class="fh5co-bg-dark">
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2> Works </h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="files/EasyScript.zip" class="work" style="background-image: url(images/Bash.jpg);">
+						<div class="desc">
+							<h3>Easy Script</h3>
+							<span>A simple bash script to execute commonly used commands</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="files/AptX.zip" class="work" style="background-image: url(images/Apt.png);">
+						<div class="desc">
+							<h3>AptX</h3>
+							<span>Bash script to install Kali-Linux Metapackages</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="files/PunX.zip" class="work" style="background-image: url(images/Pun.png);">
+						<div class="desc">
+							<h3>PunX</h3>
+							<span>Python script that sends multiple data via POST.</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+						<div class="desc">
+							<h3>N/A</h3>
+							<span>N/A</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+						<div class="desc">
+							<h3>N/A</h3>
+							<span>N/A</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+						<div class="desc">
+							<h3>N/A</h3>
+							<span>N/A</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+						<div class="desc">
+							<h3>N/A</h3>
+							<span>N/A</span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box">
+					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+						<div class="desc">
+							<h3>N/A</h3>
+							<span>N/A</span>
+						</div>
+					</a>
 				</div>
 			</div>
 		</div>
@@ -211,93 +288,23 @@
 			</div>
 		</div>
 	</div>
-	<hr>
-	<div id="fh5co-work" class="fh5co-bg-dark">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Download and Description</h2>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/EasyScript.zip" class="work" style="background-image: url(images/Bash.jpg);">
-						<div class="desc">
-							<h3>Easy Script</h3>
-							<span>A simple bash script to execute commonly used commands</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/AptX.zip" class="work" style="background-image: url(images/Apt.png);">
-						<div class="desc">
-							<h3>AptX</h3>
-							<span>Bash script to install Kali-Linux Metapackages</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="files/PunX.zip" class="work" style="background-image: url(images/Pun.png);">
-						<div class="desc">
-							<h3>PunX</h3>
-							<span>Python script that sends multiple data via POST.</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
-						<div class="desc">
-							<h3>N/A</h3>
-							<span>N/A</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
-						<div class="desc">
-							<h3>N/A</h3>
-							<span>N/A</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
-						<div class="desc">
-							<h3>N/A</h3>
-							<span>N/A</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
-						<div class="desc">
-							<h3>N/A</h3>
-							<span>N/A</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
-						<div class="desc">
-							<h3>N/A</h3>
-							<span>N/A</span>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
 	<div id="fh5co-about" class="animate-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2> Video </h2>
+					<h2> Vibe Sh*t </h2>
 				</div>
 			</div>
+		<!-- VIDEO -->
 		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
-  			<source src="vid/Tendo.mp4" type="video/mp4">
+  			<source src="media/Tendo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video> 
+		<!-- AUDIO -->
+		<audio style="display:none; margin: 0 auto;" controls autoplay>
+  			<source src="media/Yugo.mp3" type="audio/mp3">
+  			Your browser does not support the audio element.
+		</audio> 
 	<hr>
 	<div id="fh5co-footer">
 		<div class="container">
@@ -327,10 +334,8 @@
 	<script src="js/jquery.easypiechart.min.js"></script>
 	<!-- Video -->
 	<script src="js/vid.js"></script>
-
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	
 
 	</body>
 </html>
