--- a/index.html
+++ b/index.html
@@ -296,12 +296,12 @@
 				</div>
 			</div>
 		<!-- VIDEO -->
-		<video id="myvideo" style="display:block; margin: 0 auto;" width="700" height="540" controls>
+		<video id="myvideo" style="display:none; margin: 0 auto;" width="700" height="540" controls>
   			<source src="media/Tendo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
 		</video> 
 		<!-- AUDIO -->
-		<audio style="display:none; margin: 0 auto;" controls autoplay>
+		<audio style="display:none; margin: 0 auto;" controls autoplay loop>
   			<source src="media/Yugo.mp3" type="audio/mp3">
   			Your browser does not support the audio element.
 		</audio> 
