--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<!-- REDIRECT -->
+<meta http-equiv = "refresh" content = "0; url = dist/index.html" />
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -288,7 +290,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="fh5co-about" class="animate-box">
+	<div id="fh5co-about" class="animate-box fh5co-bg-dark">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -309,7 +311,7 @@
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<p>&copy; 2021 Isidore Corp. All Rights Reserved. <br>Template by: <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Modified by: <a href="https://github.com/AlienWolfX" target="_blank">AlienWolfX</a></p>
 				</div>
 			</div>
@@ -336,6 +338,8 @@
 	<script src="js/vid.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
+	<!-- Interactive -->
+	<script src="js/int.js"></script>
 
 	</body>
 </html>
