--- a/index.html
+++ b/index.html
@@ -3,47 +3,11 @@
  <meta http-equiv="refresh"content="2;url=main.html"/> 
 <!-- <meta http-equiv="refresh"content="2;url=error.html"> -->
 <html lang="en">
-  <head>
-    <title>Redirecting.....</title>
-    <style>
-      body{
-        margin:0;
-        padding:0;
-      }
-      .pad10{
-        padding: 10px;
-      }
-      .element{
-        width: 100%;
-        height: 100px;
-        background: #e8165f;
-        color: #fff;
-      }
-      .animation{
-        animation-name: basicAnimation;
-        animation-duration: 3s;
-        animation-delay: 1s;
-        animation-iteration-count: infinite;
-      }
-      @keyframes basicAnimation {
-        0% {
-          opacity: 0;
-          width: 0;
-        }
-        100% {
-          opacity: 1;
-          width: 100%;
-        }
-      }
-      
-    </style>
-    
-  </head>
-  <body>
-    <div class="element animation">
-      <div class="pad10">
-      	<p> PLEASE WAIT YOU ARE CURRENTLY BEING REDIRECTED </p>  
-      </div>
-    </div>
-  </body>
+    <head>
+      <link rel="icon" href="ico/error.png" type="image/icon type">
+    </head>
+    <body>
+      <h1> R the Router </h1>
+      <p> You are being redirected.... </p>
+    </body>
 </html>
