--- a/main.html
+++ b/main.html
@@ -1,6 +1,4 @@
 <!DOCTYPE HTML>
-<!-- REDIRECT -->
-<!-- <meta http-equiv = "refresh" content = "0; url = dist/error.html " /> -->
 <html>
 	<head>
 	<meta charset="utf-8">
@@ -80,6 +78,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
+					<img src="images/csu.png" style="float:right;width:190px;height:356px;">
 					<h2>Hello There!</h2>
 					<p>I'm Allen Cruiz a College freshman at CSU taking BSIT</p>
 					<p>
