--- a/main.html
+++ b/main.html
@@ -78,7 +78,6 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<img src="images/csu.png" style="float:right;width:190px;height:356px;">
 					<h2>Hello There!</h2>
 					<p>I'm Allen Cruiz a College freshman at CSU taking BSIT</p>
 					<p>
@@ -281,19 +280,20 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2> Vibe Sh*t </h2>
+					<h2> School logo <i class="icon-heart3"> </h2>
 				</div>
 			</div>
+			<img src="images/csu.png" class="csu" style="width:356px;height:559px;">
 		<!-- VIDEO -->
-		<video id="myvideo" style="display:none; margin: 0 auto;" width="700" height="540" controls>
+		<!-- <video id="myvideo" style="display:none; margin: 0 auto;" width="700" height="540" controls>
   			<source src="media/Tendo.mp4" type="video/mp4">
 			Your browser does not support the video tag.
-		</video> 
+		</video> -->
 		<!-- AUDIO -->
-		<audio style="display:none; margin: 0 auto;" controls autoplay loop>
+		<!-- <audio style="display:none; margin: 0 auto;" controls autoplay loop>
   			<source src="media/Yugo.mp3" type="audio/mp3">
   			Your browser does not support the audio element.
-		</audio> 
+		</audio> -->
 	<hr>
 	<div id="fh5co-footer">
 		<div class="container">
