--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="icon" href="ico/error.png" type="image/icon type">
     </head>
       <body>
-        <h1> R the Router </h1>
+        <h1> R the Redirector </h1>
         <p> You are being redirected.... </p>
       </body>
 </html>
