--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
 					<a href="files/EasyScript.zip" class="work" style="background-image: url(images/Bash.jpg);">
 						<div class="desc">
 							<h3>Easy Script</h3>
-							<span>A simple bash script to execute commonly used commands</span>
+							<span>Linux script to easly run common tasks</span>
 						</div>
 					</a>
 				</div>
@@ -122,12 +122,12 @@
 					<a href="files/PunX.zip" class="work" style="background-image: url(images/Pun.png);">
 						<div class="desc">
 							<h3>PunX</h3>
-							<span>Python script that sends multiple data via POST.</span>
+							<span>Python script that sends multiple random data to a phishing site</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+					<a href="index.html" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
 							<h3>N/A</h3>
 							<span>N/A</span>
@@ -135,7 +135,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+					<a href="index.html" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
 							<h3>N/A</h3>
 							<span>N/A</span>
@@ -143,7 +143,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+					<a href="index.html" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
 							<h3>N/A</h3>
 							<span>N/A</span>
@@ -151,7 +151,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+					<a href="index.html" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
 							<h3>N/A</h3>
 							<span>N/A</span>
@@ -159,7 +159,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/NA.jpeg);">
+					<a href="index.html" class="work" style="background-image: url(images/NA.jpeg);">
 						<div class="desc">
 							<h3>N/A</h3>
 							<span>N/A</span>
