--- a/main.html
+++ b/main.html
@@ -283,7 +283,7 @@
 					<h2> School logo <i class="icon-heart3"> </h2>
 				</div>
 			</div>
-			<img src="images/csu.png" class="csu" style="width:356px;height:559px;">
+			<img src="images/csu" class="csu" style="width:356px;height:559px;">
 		<!-- VIDEO -->
 		<!-- <video id="myvideo" style="display:none; margin: 0 auto;" width="700" height="540" controls>
   			<source src="media/Tendo.mp4" type="video/mp4">
