--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
 			</div>
 		</div>
 	</div>
-	<hr>
-	<hr>
 	<div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
 			<div class="row animate-box">
@@ -170,7 +168,6 @@
 			</div>
 		</div>
 	</div>
-	<hr>
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
@@ -323,7 +320,8 @@
 	<script src="js/vid.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	<!-- Disabled Context Menu -->
+	<!-- Disabled Context Menu 
 	<script src="js/context.js"></script>
+	-->
 	</body>
 </html>
