--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>About Me</h2>
-                    <p>Hi, I'm Allen Gabrielle Cruiz a Information Technology Student at Caraga State University</p>
-                    <p>At a young age I feel in love with Technology I reverse engineer and repair consumer grade electronics, Pen-test my personal routers/modems, and learned the basics of GNU/Linux.</p>
+                    <p>Hi, I'm Allen Gabrielle Cruiz, a Caraga State University information technology student.</p>
+                    <p>At a young age, I feel in love with technology. I reverse-engineered and repaired consumer-grade electronics, pen-tested my personal routers and modems, and learned the basics of GNU/Linux.</p>
                     <p></p>
                 </div>
             </div>
@@ -69,7 +69,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
                     <h2>Services offered</h2>
-                </div>
+                </div>At a young age I feel in love with Technology I reverse engineer and repair consumer grade electronics, Pen-test my personal routers/modems, and learned the basics of GNU/Linux.
             </div>
             <div class="row gy-4 gx-md-0 gy-md-0 row-cols-1 row-cols-md-2 row-cols-xl-3 d-md-flex d-xl-flex align-items-md-center">
                 <div class="col offset-xl-2">
@@ -92,9 +92,11 @@
                                             </svg></span><span>Update every 2 weeks</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-primary-light bs-icon me-2"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                            </svg></span><span>Ask you how's you day</span></li>
+                                            </svg></span><span>Ask you how's your day</span></li>
                                 </ul>
-                            </div><a class="btn btn-primary d-block w-100" role="button" href="#">Button</a>
+                            </div><a class="btn btn-primary d-block w-100" role="button" href="https://alienwo
+
+                            lfx.github.io/secret">Purchase</a>
                         </div>
                     </div>
                 </div>
@@ -119,7 +121,7 @@
                                             </svg></span><span>Everyday Chat + Good morning/night</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
-                                            </svg></span><span>Love, babe, sugarplum callsign</span></li>
+                                            </svg></span><span>Your always right</span></li>
                                     <li class="d-flex mb-2"><span class="bs-icon-xs bs-icon-rounded bs-icon-semi-white bs-icon me-2 xs"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-check-lg">
                                                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
                                             </svg></span><span>Change bio and status</span></li>
@@ -127,7 +129,7 @@
                                                 <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"></path>
                                             </svg></span><span>Always Available for you</span></li>
                                 </ul>
-                            </div><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="#">Button</a>
+                            </div><a class="btn btn-primary d-block w-100 bg-white-300" role="button" href="https://alienwolfx.github.io/secret">Purchase</a>
                         </div>
                     </div>
                 </div>
@@ -144,6 +146,8 @@
                         <li class="list-inline-item">&nbsp;</li>
                         <li class="list-inline-item">&nbsp;<a href="https://web.facebook.com/allengabriellecruiz"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-facebook-official fa-fw" style="font-size: 15px;"></i><span class="network-name" style="font-size: 15px;">Facebook</span></button></a></li>
                         <li class="list-inline-item">&nbsp;<a href="https://github.com/AlienWolfX"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-github fa-fw" style="font-size: 15px;"></i><span class="network-name" style="font-size: 15px;">&nbsp;github</span></button></a></li>
+                        <li class="list-inline-item">&nbsp;<a href="https://www.instagram.com/cruizallen"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-instagram" style="font-size: 15px;"></i><span class="network-name" style="font-size: 15px;">&nbsp;Instagram</span></button></a></li>
+                        <li class="list-inline-item">&nbsp;<a href="mailto:cruizallen2@gmail.com"><button class="btn btn-primary btn-lg btn-default" type="button"><i class="fa fa-envelope" style="font-size: 15px;"></i><span class="network-name" style="font-size: 15px;">&nbsp;Email</span></button></a></li>
                     </ul>
                 </div>
             </div>
